--- a/spring-oauth/src/main/resources/templates/member.html
+++ b/spring-oauth/src/main/resources/templates/member.html
@@ -25,6 +25,28 @@ Authenticated user roles:
 
 </div>
 
+<body>
+<h1>스프링 부트로 시작하는 웹 서비스</h1>
+   <div class="row">
+    <div class="col-md-10">
+        <div th:if="${not #strings.isEmpty(userName)}">
+      <img style="width:45px; height:45px" src="/image/user.png" th:src="${userImg}"
+                 class="rounded-circle img-thumbnail img-responsive">
+            <span id="login-user" th:text="${userName}">사용자</span> 님, 안녕하세요.
+            <a href="/logout" class="btn btn-sm btn-info active" role="button">Logout</a>
+        </div>
+        <div th:if="${#strings.isEmpty(userName)}">
+            <!-- 스프링 시큐리티에서 기본 제공하는 URL - 별도 컨트롤러 작성 필요 없음 -->
+            <a href="/oauth2/authorization/google" class="btn btn-sm btn-success active" role="button">Google Login</a>
+        </div>
+    </div>
+    <div th:if="${not #strings.isEmpty(userName)}" class="col-md-2">
+        <a href="/board/openBoardWrite.do" role="button" class="btn btn-primary float-right">글 등록</a>
+    </div>
+</div>
+   <br>
+</body>
+
 </body>
 </html>
 
