회원가입 구현

--- a/spring-oauth/src/main/resources/templates/index.html
+++ b/spring-oauth/src/main/resources/templates/index.html
@@ -22,6 +22,7 @@
         </div>
     </div>
     <div><a href="/login/login" role="button" class="btn btn-primary float-right">로그인</a></div>
+    <div><a href="/loginUser" role="button" class="btn btn-primary float-right">회원가입</a></div>
     <div th:if="${not #strings.isEmpty(userName)}" class="col-md-2">
         <a href="/board/write.do" role="button" class="btn btn-primary float-right">글 등록</a>
     </div>
