--- a/spring-oauth/src/main/resources/templates/login.html
+++ b/spring-oauth/src/main/resources/templates/login.html
@@ -4,8 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>로그인 페이지</title>
+	
 	<link rel="stylesheet" th:href="@{/css/style.css}"/>
 	<!-- css 가 들어있는 경로 @가 src/main/java/resources/staic 을 의미하는 것으로 보임 -->
+	
+	<!-- 부트스트랩 사용 -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
+	rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
+	crossorigin="anonymous">
+	
 </head>
 
 <body>
