--- a/spring-oauth/src/main/resources/templates/member.html
+++ b/spring-oauth/src/main/resources/templates/member.html
@@ -5,6 +5,12 @@
 	<title>member 전용</title>
 	<link rel="stylesheet" th:href="@{/css/style.css}"/>
 	<!-- css 가 들어있는 경로 @가 src/main/java/resources/staic 을 의미하는 것으로 보임 -->
+	
+		<!-- 부트스트랩 사용 -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
+	rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
+	crossorigin="anonymous">
+	
 </head>
 <body>
 <h1>For Member ....................</h1>
@@ -21,6 +27,7 @@ Authenticated username:
 Authenticated user roles:
 <div sec:authentication="principal.authorities">
 
+
 </div>
 
 </div>
@@ -30,7 +37,7 @@ Authenticated user roles:
    <div class="row">
     <div class="col-md-10">
         <div th:if="${not #strings.isEmpty(userName)}">
-      <img style="width:45px; height:45px" src="/image/user.png" th:src="${userImg}"
+      <img style="width:45px; height:45px" th:src="${userImg}"
                  class="rounded-circle img-thumbnail img-responsive">
             <span id="login-user" th:text="${userName}">사용자</span> 님, 안녕하세요.
             <a href="/logout" class="btn btn-sm btn-info active" role="button">Logout</a>
